--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication">
-        <activity android:name=".PantallaCrearRegistro"></activity>
+        <activity android:name=".FormularioNuevoCliente"></activity>
+        <activity android:name=".PantallaInvitadx" />
+        <activity android:name=".PantallaCrearRegistro" />
         <activity android:name=".PantallaInicioSesion" />
         <activity
             android:name=".SplashScreen"
