Se crea recycler View de stock de productos

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,17 +9,22 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication">
-        <activity android:name=".view.MainActivity2">
+        <activity android:name=".PantallaInicioSesion"></activity>
+        <activity android:name=".MainActivityRecycler">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
+        <activity android:name=".view.InicioSesion" />
+        <activity android:name=".view.CrearRegistro" />
+        <activity android:name=".view.SolicitudDePedido" />
+        <activity android:name=".view.MainActivity2" />
         <activity android:name=".FormularioNuevoCliente" />
         <activity android:name=".PantallaInvitadx" />
         <activity android:name=".PantallaCrearRegistro" />
-        <activity android:name=".PantallaInicioSesion" />
         <activity
             android:name=".SplashScreen"
             android:theme="@android:style/Theme.DeviceDefault.NoActionBar.Fullscreen">
