--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,12 +10,18 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication">
         <activity
-            android:name=".ui.MainActivityStockProductos"
+            android:name=".view.activity.MainActivityKotlin"
             android:exported="true" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
 
         </activity>
-
-
+        <activity
+            android:name=".ui.MainActivityStockProductos"
+            android:exported="true"></activity>
         <activity
             android:name=".prueba2fragmentpedido.MainActivity_RealizarPedidoPrueba2"
             android:exported="true" />
@@ -28,7 +34,6 @@
         <activity android:name=".view.activity.MainActivityRecycler" />
         <activity android:name=".view.activity.InicioSesion" />
         <activity android:name=".view.activity.CrearRegistro" />
-
         <activity android:name=".view.activity.MainActivity2" />
         <activity android:name=".view.activity.FormularioNuevoCliente" />
         <activity android:name=".view.activity.PantallaInvitadx" />
@@ -36,11 +41,7 @@
         <activity
             android:name=".view.activity.SplashScreen"
             android:theme="@android:style/Theme.DeviceDefault.NoActionBar.Fullscreen">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity android:name=".view.activity.MainActivity" />
     </application>
