--- a/app/build.gradle
+++ b/app/build.gradle
@@ -97,6 +97,11 @@ dependencies {
     // GLIDE
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+    //Room
+    implementation 'androidx.room:room-ktx:2.3.0'
+    kapt 'androidx.room:room-compiler:2.3.0'
+
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
 
 
 }
