--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,24 +2,23 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="cl.valentina.miapp">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:allowBackup="true"
         android:name=".room.MyRoomRetroApplication"
+        android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication"
-        android:usesCleartextTraffic="true">>
+        android:usesCleartextTraffic="true">
+        <activity
+            android:name=".view.activity.PantallaMiPedido"
+            android:exported="true" />
         <activity
             android:name=".view.activity.MainActivityKotlin"
-            android:exported="true" >
-
-
-        </activity>
-
+            android:exported="true"></activity>
         <activity
             android:name=".prueba2fragmentpedido.MainActivityRealizarPedidoPrueba2"
             android:exported="true" />
@@ -29,14 +28,15 @@
         <activity android:name=".view.activity.MainActivity2" />
         <activity android:name=".view.activity.FormularioNuevoCliente" />
         <activity android:name=".view.activity.PantallaInvitadx" />
-        <activity android:name=".api.MainActivityApi"/>
-        <activity android:name=".room.MainActivityRoom"/>
+        <activity android:name=".api.MainActivityApi" />
+        <activity android:name=".room.MainActivityRoom" />
         <activity android:name=".view.activity.PantallaCrearRegistro" />
         <activity
             android:name=".view.activity.SplashScreen"
             android:theme="@android:style/Theme.DeviceDefault.NoActionBar.Fullscreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
